--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
           <h1>Client testimonials</h1>
           <div>
               <div class="box-profil">
-                  <img src="images/image-emily.jpg">
+                  <img src="images/image-emily.jpg" alt="people">
                   <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
                   <h1>Emily R.</h1>
                   <p>Marketing Director</p>
               </div>
               <div class="box-profil">
-                  <img src="images/image-thomas.jpg">
+                  <img src="images/image-thomas.jpg" alt="people">
                   <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
                   <h1>Thomas S.</h1>
                   <p>Chief Operating Officer</p>
               </div>
               <div class="box-profil">
-                  <img src="images/image-jennie.jpg">
+                  <img src="images/image-jennie.jpg" alt="people">
                   <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
                   <h1>Jennie F.</h1>
                   <p>Business Owner</p>
